<resources>
    <string name="app_name">SRS Guard</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_requests">All Requests</string>
    <string name="logout">Logout</string>
    <string name="new_guest_form">New Guest Form</string>
    <string name="name">Name</string>
    <string name="flat_number">Flat Number</string>
    <string name="loading">Loading...</string>
    <string name="send">Send</string>
    <string name="cancle">Cancle</string>
    <string name="images_and_docs">Images and Docs</string>
    <string name="enter_short_description">Enter short description</string>
    <string name="enter_guest_name">Enter Guest Name</string>
    <string name="access_denied">Access Denied</string>
    <string name="your_account_is_not_approved_yet_nplease_contact_your_admin_for_access">Your account is not approved yet.\nPlease contact your admin for access.</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="recent_guests">Recent Guests</string>
    <string name="password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="not_an_accound_register_account">Not An Account /Register Account</string>
    <string name="settings">Settings</string>
    <string name="change_password">change Password</string>
    <string name="save_password">Save Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="your_new_password_must_be_different_from_previous_one">Your new password must be different from previous one</string>
    <string name="create_new_password">Create New Password</string>
    <string name="contact_info">Contact Info</string>
    <string name="mobile_no">Mobile No :- </string>
    <string name="society_name">Society Name :- </string>
    <string name="cancel">Cancel</string>
</resources>