<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGuestFormActivity">

    <include
        android:id="@+id/topAppBar"
        layout="@layout/top_app_bar"
        />
    <TextView
        android:id="@+id/textViewNewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"

        android:text="@string/new_guest_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        />
    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNewFrom"

        />
   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/InputFieldName"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_margin="20dp"
       android:background="@drawable/input_bg_with_border"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/labelName"
       />
    <TextView
        android:id="@+id/labelFlatNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flat_number"
        android:layout_margin="20dp"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InputFieldName"

        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFlatInput"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelFlatNumber"
        >
        <EditText
            android:id="@+id/FlatEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_bg_with_border"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/labelDocAndImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Images and Docs"
        android:layout_margin="20dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewFlatInput"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/imagesAndDocCardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDocAndImages"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                />
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_add_24"
                android:background="@android:color/transparent"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center"
     android:layout_marginTop="20dp"
     app:layout_constraintTop_toBottomOf="@id/imagesAndDocCardView"
      app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     >

     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
         android:text="Cancle"
         android:backgroundTint="@color/red"
         />
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
         android:text="Send"
         android:backgroundTint="@color/green"
         />
 </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>